Init just monthly analysis. Changed all time series to ts object

--- a/analysis_report.Rmd
+++ b/analysis_report.Rmd
@@ -65,7 +65,7 @@ Correlations: Other pollutants (Benzene, CO, NO2, and NOx) can contribute to the
 # Pre-requirements
 
 set.seed(123) # set pseudorandom generator for reprocucibility
-requirements <- c("dplyr", "ggplot2", "kableExtra", "ARPALData", "imputeTS", "xts", "forecast", "TSA", "tsbox")
+requirements <- c("dplyr", "ggplot2", "kableExtra", "ARPALData", "imputeTS", "xts", "forecast", "TSA")
 for (library_name in requirements) {
   if (!require(library_name, character.only = TRUE, exclude = if (library_name == "dplyr") c("lag", "filter") else NULL)) {
     install.packages(library_name, repos = "https://cloud.r-project.org")
@@ -91,7 +91,8 @@ start_date <- "2014-01-01"
 end_date <- "2023-12-31"
 # Milano v.Senato, Bormio v.Monte Braulio, Schivenoglia v. Malpasso
 aq_station_ids <- c(548, 571, 703)
-aq_station_names_short <- c("Station 548", "Station 571", "Station 703")
+aq_station_names_code <- c("Station 548", "Station 571", "Station 703")
+aq_station_names_short <- c("Milano v.Senato", "Bormio v.Monte Braulio", "Schivenoglia v. Malpasso")
 aq_station_names_full <- c("Station 548 - Milano v.Senato", "Station 571 - Bormio v.Monte Braulio", "Station 703 - Schivenoglia v. Malpasso")
 station_colors <- c("steelblue", "darkorange", "#009E73")
 filtering_colors <- c("red", "blue", "green")
@@ -247,7 +248,7 @@ for (i in 1:length(com_poll_names)) {
     df_aq_daily[[com_poll_names[i]]] ~ as.factor(df_aq_daily$IDStation),
     main = "Boxplot of common pollutants among the stations",
     xlab = "Station ID",
-    ylab = pollutant_units[[com_poll_names[i]]],
+    ylab = paste0(com_poll_names[i], " (", pollutant_units[[com_poll_names[i]]], ")"),
     col = station_colors,
     las = 2
   )
@@ -279,34 +280,10 @@ plot_ts_grid(
   ts_names = aq_station_names_full
 )
 ```
-
 ```{r}
-agg_df_aq_m <- ARPALData::Time_aggregate(
-  df_aq_m, "weekly",
-  Var_vec = "PM10", Fns_vec = "mean"
-)
-agg_df_aq_b <- ARPALData::Time_aggregate(
-  df_aq_b, "weekly",
-  Var_vec = "PM10", Fns_vec = "mean"
-)
-agg_df_aq_s <- ARPALData::Time_aggregate(
-  df_aq_s, "weekly",
-  Var_vec = "PM10", Fns_vec = "mean"
-)
-plot_ts_grid(
-  ts_list = list(
-    xts(agg_df_aq_m$PM10, order.by = agg_df_aq_m$Date),
-    xts(agg_df_aq_b$PM10, order.by = agg_df_aq_b$Date),
-    xts(agg_df_aq_s$PM10, order.by = agg_df_aq_s$Date)
-  ),
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
-  ts_colors = station_colors,
-  n_row = 3,
-  ts_names = aq_station_names_full
-)
-agg_df_aq_m <- NULL
-agg_df_aq_b <- NULL
-agg_df_aq_s <- NULL
+ts_m <- xts2ts(ts_m, 365.25)
+ts_b <- xts2ts(ts_b, 365.25)
+ts_s <- xts2ts(ts_s, 365.25)
 ```
 
 ```{r}
@@ -322,21 +299,23 @@ agg_df_aq_s <- ARPALData::Time_aggregate(
   df_aq_s, "monthly",
   Var_vec = "PM10", Fns_vec = "mean"
 )
-monthplot(
-  tsbox::ts_ts(xts(agg_df_aq_m$PM10, order.by = agg_df_aq_m$Date, frequency = 12)),
-  main = "Monthly plot of PM10 for Milano v.Senato",
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+ts_m_monthly <- xts(agg_df_aq_m$PM10, order.by = agg_df_aq_m$Date)
+ts_b_monthly <- xts(agg_df_aq_b$PM10, order.by = agg_df_aq_b$Date)
+ts_s_monthly <- xts(agg_df_aq_s$PM10, order.by = agg_df_aq_s$Date)
+
+plot_ts_grid(
+  ts_list = list(ts_m_monthly, ts_b_monthly, ts_s_monthly),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  ts_colors = station_colors,
+  n_row = 3,
+  ts_names = aq_station_names_full
 )
-monthplot(
-  tsbox::ts_ts(xts(agg_df_aq_b$PM10, order.by = agg_df_aq_b$Date, frequency = 12)),
-  main = "Monthly plot of PM10 for Bormio v.Monte Braulio",
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
-)
-monthplot(
-  tsbox::ts_ts(xts(agg_df_aq_s$PM10, order.by = agg_df_aq_s$Date, frequency = 12)),
-  main = "Monthly plot of PM10 for Schivenoglia v. Malpasso",
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
-)
+agg_df_aq_m <- NULL
+agg_df_aq_b <- NULL
+agg_df_aq_s <- NULL
+ts_m_monthly <- xts2ts(ts_m_monthly, 12)
+ts_b_monthly <- xts2ts(ts_b_monthly, 12)
+ts_s_monthly <- xts2ts(ts_s_monthly, 12)
 ```
 
 
@@ -364,83 +343,83 @@ colnames(stats_na_table) <- c(
   "Length TS", "Number NAs", "Number Gaps", "Average Gap Size",
   "Percentage NAs", "Longest NA gap", "Most frequent gap size"
 )
-rownames(stats_na_table) <- aq_station_names_short
+rownames(stats_na_table) <- aq_station_names_code
 stats_na_table
 ```
 
 ```{r fig.height=4, fig.width=10}
+date_range <- seq(from = as.Date(start_date), to = as.Date(end_date), by = 1)
 imputeTS::ggplot_na_distribution(ts_m,
-  x_axis_labels = time(ts_m),
-  title = paste(aq_station_names_short[1], "-", "missing values"),
+  x_axis_labels = date_range,
+  title = paste(aq_station_names_code[1], "-", "missing values"),
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
   color_lines = station_colors[1],
   size_points = NA
 )
 imputeTS::ggplot_na_distribution2(ts_m,
-  title = paste(aq_station_names_short[1], "-", "missing values ratio per interval"),
+  title = paste(aq_station_names_code[1], "-", "missing values ratio per interval"),
 )
 ```
 ```{r fig.height=4, fig.width=10}
 imputeTS::ggplot_na_distribution(ts_b,
-  x_axis_labels = time(ts_b),
-  title = paste(aq_station_names_short[2], "-", "missing values"),
+  x_axis_labels = date_range,
+  title = paste(aq_station_names_code[2], "-", "missing values"),
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
   color_lines = station_colors[2],
   size_points = NA
 )
 imputeTS::ggplot_na_distribution2(ts_b,
-  title = paste(aq_station_names_short[2], "-", "missing values ratio per interval"),
+  title = paste(aq_station_names_code[2], "-", "missing values ratio per interval"),
 )
 ```
 ```{r fig.height=4, fig.width=10}
 imputeTS::ggplot_na_distribution(ts_s,
-  x_axis_labels = time(ts_s),
-  title = paste(aq_station_names_short[3], "-", "missing values"),
+  x_axis_labels = date_range,
+  title = paste(aq_station_names_code[3], "-", "missing values"),
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
   color_lines = station_colors[3],
   size_points = NA
 )
 imputeTS::ggplot_na_distribution2(ts_s,
-  title = paste(aq_station_names_short[3], "-", "missing values ratio per interval"),
+  title = paste(aq_station_names_code[3], "-", "missing values ratio per interval"),
 )
 ```
 
 ```{r fig.height=4, fig.width=8}
-ts_m_imputed <- imputeTS::na_kalman(ts_m)
-ts_b_imputed <- imputeTS::na_kalman(ts_b)
-ts_s_imputed <- imputeTS::na_kalman(ts_s)
+ts_m_imputed <- imputeTS::na_interpolation(ts_m)
+ts_b_imputed <- imputeTS::na_interpolation(ts_b)
+ts_s_imputed <- imputeTS::na_interpolation(ts_s)
 
 imputeTS::ggplot_na_imputations(
-  window(ts_m, start = "2021-01-01", end = "2022-12-31"),
-  window(ts_m_imputed, start = "2021-01-01", end = "2022-12-31"),
-  title = paste(aq_station_names_short[1], "-", "Kalman imputation"),
-  x_axis_labels = time(window(ts_m, start = "2021-01-01", end = "2022-12-31")),
+  window(xts(as.numeric(ts_m), order.by = df_aq_m$Date), start = "2021-01-01", end = "2022-12-31"),
+  window(xts(as.numeric(ts_m_imputed), order.by = df_aq_m$Date), start = "2021-01-01", end = "2022-12-31"),
+  title = paste(aq_station_names_short[1], "-", "Linear imputation"),
+  x_axis_labels = time(window(xts(as.numeric(ts_m), order.by = df_aq_m$Date), start = "2021-01-01", end = "2022-12-31")),
   color_points = station_colors[1],
   color_lines = rgb2hex_custom(col2rgb_custom(station_colors[1], 0.6)),
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
 imputeTS::ggplot_na_imputations(
-  window(ts_b, start = "2014-01-01", end = "2015-12-31"),
-  window(ts_b_imputed, start = "2014-01-01", end = "2015-12-31"),
-  title = paste(aq_station_names_short[2], "-", "Kalman imputation"),
-  x_axis_labels = time(window(ts_b, start = "2014-01-01", end = "2015-12-31")),
+  window(xts(as.numeric(ts_b), order.by = df_aq_b$Date), start = "2014-01-01", end = "2015-12-31"),
+  window(xts(as.numeric(ts_b_imputed), order.by = df_aq_b$Date), start = "2014-01-01", end = "2015-12-31"),
+  title = paste(aq_station_names_short[2], "-", "Linear imputation"),
+  x_axis_labels = time(window(xts(as.numeric(ts_b), order.by = df_aq_b$Date), start = "2014-01-01", end = "2015-12-31")),
   color_points = station_colors[2],
   color_lines = rgb2hex_custom(col2rgb_custom(station_colors[2], 0.6)),
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
 imputeTS::ggplot_na_imputations(
-  window(ts_s, start = "2016-01-01", end = "2017-12-31"),
-  window(ts_s_imputed, start = "2016-01-01", end = "2017-12-31"),
-  title = paste(aq_station_names_short[3], "-", "Kalman imputation"),
-  x_axis_labels = time(window(ts_s, start = "2016-01-01", end = "2017-12-31")),
+  window(xts(as.numeric(ts_s), order.by = df_aq_s$Date), start = "2016-01-01", end = "2017-12-31"),
+  window(xts(as.numeric(ts_s_imputed), order.by = df_aq_s$Date), start = "2016-01-01", end = "2017-12-31"),
+  title = paste(aq_station_names_short[3], "-", "Linear imputation"),
+  x_axis_labels = time(window(xts(as.numeric(ts_s), order.by = df_aq_s$Date), start = "2016-01-01", end = "2017-12-31")),
   color_points = station_colors[3],
   color_lines = rgb2hex_custom(col2rgb_custom(station_colors[3], 0.6)),
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
-
 ts_m <- ts_m_imputed
 ts_b <- ts_b_imputed
 ts_s <- ts_s_imputed
@@ -452,12 +431,12 @@ outliers_ts_m <- tsoutliers(ts_m)
 outliers_ts_b <- tsoutliers(ts_b)
 outliers_ts_s <- tsoutliers(ts_s)
 
-tmp_ts_m <- xts(ts_m)
+tmp_ts_m <- ts(ts_m)
 tmp_ts_m[outliers_ts_m$index] <- NA
 imputeTS::ggplot_na_imputations(
   tmp_ts_m, ts_m,
-  title = paste(aq_station_names_short[1], "-", "outliers detection"),
-  x_axis_labels = time(ts_m),
+  title = paste(aq_station_names_code[1], "-", "outliers detection"),
+  x_axis_labels = date_range,
   color_lines = station_colors[1],
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
@@ -465,12 +444,12 @@ imputeTS::ggplot_na_imputations(
   size_imputations = 3,
   legend = FALSE
 )
-tmp_ts_b <- xts(ts_b)
+tmp_ts_b <- ts(ts_b)
 tmp_ts_b[outliers_ts_b$index] <- NA
 imputeTS::ggplot_na_imputations(
   tmp_ts_b, ts_b,
-  title = paste(aq_station_names_short[2], "-", "outliers detection"),
-  x_axis_labels = time(ts_b),
+  title = paste(aq_station_names_code[2], "-", "outliers detection"),
+  x_axis_labels = date_range,
   color_lines = station_colors[2],
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
@@ -478,12 +457,12 @@ imputeTS::ggplot_na_imputations(
   size_imputations = 3,
   legend = FALSE
 )
-tmp_ts_s <- xts(ts_s)
+tmp_ts_s <- ts(ts_s)
 tmp_ts_s[outliers_ts_s$index] <- NA
 imputeTS::ggplot_na_imputations(
   tmp_ts_s, ts_s,
-  title = paste(aq_station_names_short[3], "-", "outliers detection"),
-  x_axis_labels = time(ts_s),
+  title = paste(aq_station_names_code[3], "-", "outliers detection"),
+  x_axis_labels = date_range,
   color_lines = station_colors[3],
   color_imputations = "red",
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
@@ -491,7 +470,6 @@ imputeTS::ggplot_na_imputations(
   size_imputations = 3,
   legend = FALSE
 )
-
 outliers_ts_m <- NULL
 outliers_ts_b <- NULL
 outliers_ts_s <- NULL
@@ -516,100 +494,103 @@ s.window controls how rapidly the seasonal component can change. Small values al
 If you think the seasonal pattern is constant through time, you should set this parameter to a big value, so that you use the entire data to perform your analysis. If on the other way round, the seasonal pattern evolves quickly, reduce this parameter to use only the recent data so that your analysis is not affected by old seasonal pattern that are not relevant anymore
 ```{r}
 plot_filtered_ts(
-  original_ts = tsbox::ts_ts(ts_m),
-  filtered_ts_list = list(simple_ma(tsbox::ts_ts(ts_m), p = 4), simple_ma(tsbox::ts_ts(ts_m), p = 8), simple_ma(tsbox::ts_ts(ts_m), p = 12)),
-  main = paste(aq_station_names_short[1], "-", "simple moving average filter"),
+  original_ts = ts_m_monthly,
+  filtered_ts_list = list(simple_ma(ts_m_monthly, p = 4), simple_ma(ts_m_monthly, p = 8), simple_ma(ts_m_monthly, p = 12)),
+  main = paste(aq_station_names_code[1], "-", "simple moving average filter"),
   ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
   legend_names = c("p = 4", "p = 8", "p = 12"),
   line_colors = filtering_colors
 )
-# plot_filtered_ts(
-#  original_ts = ts_b,
-#  filtered_ts_list = list(simple_ma(ts_b, p = 4), simple_ma(ts_b, p = 8), simple_ma(ts_b, p = 12)),
-#  main = paste(aq_station_names_short[2], "-", "simple moving average filter"),
-#  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
-#  legend_names = c("p = 4", "p = 8", "p = 12"),
-#  line_colors = filtering_colors
-# )
-# plot_filtered_ts(
-#  original_ts = ts_s,
-#  filtered_ts_list = list(simple_ma(ts_s, p = 4), simple_ma(ts_s, p = 8), simple_ma(ts_s, p = 12)),
-#  main = paste(aq_station_names_short[3], "-", "simple moving average filter"),
-#  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-#  legend_names = c("p = 4", "p = 8", "p = 12"),
-#  line_colors = filtering_colors
-# )
-```
-
-```{r}
-stl_ts_m <- ts_m %>% stl(s.window = 13, robust = TRUE)
-stl_ts_b <- ts_b %>% stl(s.window = 13, robust = TRUE)
-stl_ts_s <- ts_s %>% stl(s.window = 13, robust = TRUE)
-
-plot(
-  stl_ts_m,
-  main = paste(aq_station_names_short[1], "-", "STL decomposition"),
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
-)
-plot(
-  stl_ts_b,
-  main = paste(aq_station_names_short[2], "-", "STL decomposition"),
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
-)
-plot(
-  stl_ts_s,
-  main = paste(aq_station_names_short[3], "-", "STL decomposition"),
-  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
-)
-
-Box.test(stl_ts_m$time.series[, "remainder"], lag = log(length(ts_m)), type = "Ljung-Box")
-Box.test(stl_ts_b$time.series[, "remainder"], lag = log(length(ts_b)), type = "Ljung-Box")
-Box.test(stl_ts_s$time.series[, "remainder"], lag = log(length(ts_s)), type = "Ljung-Box")
-```
-
-```{r}
 plot_filtered_ts(
-  original_ts = ts_m,
-  filtered_ts_list = list(seasadj(stl_ts_m)),
-  main = paste(aq_station_names_short[1]),
-  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-  legend_names = "Seasonally adjusted",
-  line_colors = filtering_colors[1]
+  original_ts = ts_b_monthly,
+  filtered_ts_list = list(simple_ma(ts_b_monthly, p = 4), simple_ma(ts_b_monthly, p = 8), simple_ma(ts_b_monthly, p = 12)),
+  main = paste(aq_station_names_code[2], "-", "simple moving average filter"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = c("p = 4", "p = 8", "p = 12"),
+  line_colors = filtering_colors
 )
 plot_filtered_ts(
-  original_ts = ts_b,
-  filtered_ts_list = list(seasadj(stl_ts_b)),
-  main = paste(aq_station_names_short[2]),
-  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-  legend_names = "Seasonally adjusted",
-  line_colors = filtering_colors[1]
-)
-plot_filtered_ts(
-  original_ts = ts_s,
-  filtered_ts_list = list(seasadj(stl_ts_s)),
-  main = paste(aq_station_names_short[3]),
-  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-  legend_names = "Seasonally adjusted",
-  line_colors = filtering_colors[1]
+  original_ts = ts_s_monthly,
+  filtered_ts_list = list(simple_ma(ts_s_monthly, p = 4), simple_ma(ts_s_monthly, p = 8), simple_ma(ts_s_monthly, p = 12)),
+  main = paste(aq_station_names_code[3], "-", "simple moving average filter"),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = c("p = 4", "p = 8", "p = 12"),
+  line_colors = filtering_colors
 )
 ```
 
 ```{r}
-plot_stl_components(
-  list(stl_ts_m, stl_ts_b, stl_ts_s),
-  main = "Trend components for PM10",
-  component_name = "trend",
-  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-  names = aq_station_names_short
+monthplot(
+  ts_m_monthly,
+  main = paste("Monthly plot of PM10 for", aq_station_names_short[1]),
+  xlab = "Month",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
-plot_stl_components(
-  list(stl_ts_m, stl_ts_b, stl_ts_s),
-  main = "Seasonal components for PM10",
-  component_name = "seasonal",
-  ylab = paste("PM10 ", "(", pollut_units[["PM10"]], ")", sep = ""),
-  names = aq_station_names_short
+monthplot(
+  ts_b_monthly,
+  main = paste("Monthly plot of PM10 for", aq_station_names_short[2]),
+  xlab = "Month",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
+)
+monthplot(
+  ts_s_monthly,
+  main = paste("Monthly plot of PM10 for", aq_station_names_short[3]),
+  xlab = "Month",
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = "")
 )
 ```
+
+```{r}
+stl_ts_m_monthly <- stl(ts_m_monthly, s.window = "periodic", robust = TRUE)
+stl_ts_b_monthly <- stl(ts_b_monthly, s.window = "periodic", robust = TRUE)
+stl_ts_s_monthly <- stl(ts_s_monthly, s.window = "periodic", robust = TRUE)
+plot(
+  stl_ts_m_monthly,
+  main = paste(aq_station_names_code[1], "-", "PM10 - STL decomposition")
+)
+plot(
+  stl_ts_b_monthly,
+  main = paste(aq_station_names_code[2], "-", "PM10 - STL decomposition")
+)
+plot(
+  stl_ts_s_monthly,
+  main = paste(aq_station_names_code[3], "-", "PM10 - STL decomposition")
+)
+```
+
+```{r}
+Box.test(stl_ts_m_monthly$time.series[, "remainder"], lag = log(length(ts_m_monthly)), type = "Ljung-Box")
+Box.test(stl_ts_b_monthly$time.series[, "remainder"], lag = log(length(ts_b_monthly)), type = "Ljung-Box")
+Box.test(stl_ts_s_monthly$time.series[, "remainder"], lag = log(length(ts_s_monthly)), type = "Ljung-Box")
+```
+
+```{r}
+plot_filtered_ts(
+  original_ts = ts_m_monthly,
+  filtered_ts_list = list(seasadj(stl_ts_m_monthly)),
+  main = paste(aq_station_names_code[1]),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[1]
+)
+plot_filtered_ts(
+  original_ts = ts_b_monthly,
+  filtered_ts_list = list(seasadj(stl_ts_b_monthly)),
+  main = paste(aq_station_names_code[2]),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[2]
+)
+plot_filtered_ts(
+  original_ts = ts_s_monthly,
+  filtered_ts_list = list(seasadj(stl_ts_s_monthly)),
+  main = paste(aq_station_names_code[3]),
+  ylab = paste("PM10 ", "(", pollutant_units[["PM10"]], ")", sep = ""),
+  legend_names = "Seasonally adjusted",
+  line_colors = filtering_colors[3]
+)
+```
+
 
 ```{r}
 # p <- 4
